--- a/Public/css/upload-photo.css
+++ b/Public/css/upload-photo.css
@@ -1,3 +1,7 @@
+.container{
+    width: 1000px;
+}
+
 .public-head-steps {
 	color: #989898;
 	font: 12px/16px "宋体",Tahoma;
@@ -27,9 +31,21 @@
 	width: 978px;
 	border: 1px dashed #d4d7d7;
 	margin-top: -1px;
-	padding-top: 0;
+	padding: 20px;
 }
 .upload-button-wrapper{
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.photo-block {
+    background: #FFF;
+    position: relative;
+    display: inline-block;
+    width: 110px;
+    height: 110px;
+    margin: 0 25px 25px 0;
+    letter-spacing: normal;
+    border-radius: 5px 5px 3px 3px;
+    vertical-align: top;
 }
