--- a/Public/css/album-edit.css
+++ b/Public/css/album-edit.css
@@ -69,12 +69,13 @@
 }
 .scene-list .scene-item {
 	float: left;
-	height: 73px;
-	width: 108px;
+	height: 50px;
+	width: 100px;
 	background-color: #fff;
 	border: 1px solid #d8d8d8;
 	padding: 13px 0 20px;
-	margin-bottom: 20px;
+	margin-right: 5px;
+	margin-bottom: 0px;
 	text-align: center;
 	line-height: 20px;
 	color: #333;
@@ -82,7 +83,7 @@
 	position: relative;
 }
 .scene-tip {
-	background: url(http://lvyou1.bdimg.com/static/widget/pictravel/edit-pic-day/day-scene/scene-icon_37887337.png) repeat-x 0 20px;
+	border-bottom: 1px dashed #d4d7d7;
 	height: 22px;
 	font: 14px/22px "宋体",Tahoma;
 	margin: 0 27px 30px 0;
