--- a/Public/css/album-edit.css
+++ b/Public/css/album-edit.css
@@ -100,3 +100,9 @@
 .img-tag{
 	display: inline-block;
 }
+.edit-one-scene{
+    background-color: #f5fafc;
+    border: 1px dashed #d5d5d5;
+    padding: 25px 2px 30px 2px;
+    margin-top: -1px;
+}
