--- a/Public/css/upload-photo.css
+++ b/Public/css/upload-photo.css
@@ -27,11 +27,11 @@
 }
 .upload-container {
 	background-color: #f5fafc;
-	height: 448px;
+	height: 410px;
 	width: 978px;
 	border: 1px dashed #d4d7d7;
 	margin-top: -1px;
-	padding: 20px;
+	padding: 10px;
 }
 .upload-button-wrapper{
 	margin-left: auto;
@@ -44,8 +44,12 @@
     display: inline-block;
     width: 110px;
     height: 110px;
-    margin: 0 25px 25px 0;
+    margin: 0 20px 20px 0;
     letter-spacing: normal;
     border-radius: 5px 5px 3px 3px;
     vertical-align: top;
+}
+button.close{
+    position: absolute;
+    left: 95px;
 }
