--- a/Public/css/photo-list.css
+++ b/Public/css/photo-list.css
@@ -3,18 +3,27 @@
     margin: 0 auto;
 }*/
 
-#masonry 
-    { 
-        padding: 0; 
-        min-height: 450px; 
-        margin: 0 auto; 
-    } 
-#masonry .thumbnail 
-    { 
-        width: 330px; 
-        margin: 20px;
-        padding: 0; 
-        border-width: 1px; 
-        -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); 
-                box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); 
-    } 
+#masonry { 
+    padding: 0; 
+    min-height: 450px; 
+    margin: 0 auto; 
+} 
+#masonry .thumbnail { 
+    width: 330px; 
+    margin: 20px;
+    padding: 0; 
+    border-width: 1px; 
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); 
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175); 
+} 
+
+
+.icon-remove-photo{
+   position: absolute;
+   top: -10px;
+   right: -10px;
+   opacity: 0.3;
+}
+.icon-remove-photo:hover{
+    opacity: 1;
+}
