--- a/Public/css/upload-photo.css
+++ b/Public/css/upload-photo.css
@@ -51,5 +51,11 @@
 }
 button.close{
     position: absolute;
-    left: 95px;
+    right: 0px;
+    height: 20px;
+    width: 20px;
+    background-color: black;
+}
+.close span{
+	color: white;
 }
