--- a/Public/css/album-edit.css
+++ b/Public/css/album-edit.css
@@ -27,10 +27,10 @@
 }
 .upload-container {
 	background-color: #f5fafc;
-	height: 448px;
+	/*height: 448px;
 	width: 978px;
 	border: 1px dashed #d4d7d7;
-	margin-top: -1px;
+	margin-top: -1px;*/
 	padding-top: 0;
 }
 .upload-button-wrapper{
@@ -44,12 +44,21 @@
 	padding: 15px 0;
 }
 .scene-div{
-	background: url(http://lvyou2.bdimg.com/static/widget/pictravel/edit-pic-day/day-title/day-title_a37dc975.png) no-repeat;
+	/*background: url(http://lvyou2.bdimg.com/static/widget/pictravel/edit-pic-day/day-title/day-title_a37dc975.png) no-repeat;
 	width: 93px;
-	height: 80px;
+	height: 80px;*/
 	text-align: center;
 	position: absolute;
-	left: -7px;	
+	left: -10px;	
+}
+.scene-div .scene-title{
+	-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+	color: #fff;
+	font-weight: bold;
+	font-size: 18px;
+	padding: 5px 10px 5px 10px;
+	background:-webkit-linear-gradient(top, #7fb8ad, #94bda7);background:-moz-linear-gradient(top, #7fb8ad, #94bda7);background:linear-gradient(top, #7fb8ad, #94bda7);
 }
 .day-delete {
 	background: #333 url(http://lvyou2.bdimg.com/static/pictravel/edit/img/edit-delete-btn_965f279b.png) no-repeat;
@@ -105,4 +114,6 @@
     border: 1px dashed #d5d5d5;
     padding: 25px 2px 30px 2px;
     margin-top: -1px;
+    margin-left: auto;
+    margin-right: auto;
 }
