--- a/Public/css/album-list.css
+++ b/Public/css/album-list.css
@@ -1,10 +1,15 @@
 .public-header {
-	background: url(http://lvyou4.bdimg.com/static/user/img/background-ie_a491353.png) repeat;
-	background: rgba(0,0,0,.3);
+    background:-webkit-linear-gradient(top, #7fb8ad, #94bda7);background:-moz-linear-gradient(top, #7fb8ad, #94bda7);background:linear-gradient(top, #7fb8ad, #94bda7);
+	/*background: url(http://lvyou4.bdimg.com/static/user/img/background-ie_a491353.png) repeat;
+	background: rgba(0,0,0,.3);*/
 	padding: 24px 0 5px 0;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+}
+.header-text{
+    color: #fff;
+    font-weight: bold;
 }
 /*.card-block {*/
 	/*background: #FFF;*/
