--- a/Public/css/min.css
+++ b/Public/css/min.css
@@ -2639,13 +2639,14 @@ input+span.error{margin-top:5px;display:inline-block}
 .btn-wide{padding:10px 40px}
 .signup-welcome{text-align:center;color:#fff;margin:-36px 0 0 0;font-size:3em}
 .signup-welcome small{color:#555}
-#signup-banner{padding:8em 0}
+#signup-banner{padding:4em 0}
 #signup-form{margin-top:-91px}
 @media (max-width: 767px){#signup-form{margin-top:0}
 }
 
 #signup-form .panel{border-color:#c5c5c5}
-#signup-form .panel-heading{background:#89a0ad;color:#fff}
+#signup-form .panel-heading{background:#89a0ad;color:#fff;padding: 25px;}
+#signup-form .panel-body{padding-top: 15px;}
 #signup-form .panel-title{font-size:26px}
 .signup-subheading{margin-bottom:2em;padding-bottom:1em;font-weight:300;border-bottom:1px solid #e9e9e9}
 #signup-form fieldset{margin-bottom:4em}
